# ave_technology_test_task

./: Dockerfile  README.md  SecondTask.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __main__.py  container.py  models.py
app/api/v1/: endpoints.py
