[project]
name = "ave-technology-test-task"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "phonenumbers>=9.0.5",
    "pydantic-extra-types>=2.10.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.1.0",
    "uvicorn>=0.34.2",
]
